--- a/view/frontend/layout/catalog_product_view.xml
+++ b/view/frontend/layout/catalog_product_view.xml
@@ -3,7 +3,7 @@
       xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
 	<body>
 		<referenceContainer name="product.info.social">
-        <block class="Biren\ProductId\Block\View\Extra"
+        <block class="Magento\Catalog\Block\Product\View"
             name="product.view.extra"
             template="Biren_ProductId::productdata.phtml"
             after="-">
